Added CalCal ini files

--- a/UserFiles/Plugins/FGen/FgenPluginBaseClass/none.ini
+++ b/UserFiles/Plugins/FGen/FgenPluginBaseClass/none.ini
@@ -2,7 +2,7 @@
 Path = "..\..\FgenPlugins\FgenPluginBaseClass\FgenPluginsBase.lvclass"
 
 [Type]
-Type = None
+Type = none
 
 [RefClk]
 RefClk = "0"
