--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/PMUCalCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/PMUCalCal.ini
@@ -10,7 +10,7 @@ Script.<size(s)> = "3"
 Script 0 = "ErrorSeverity,Abort"
 Script 1 = "SyncGetLockStatus"
 Script 2 = "SyncCheckLock"
-# run script for finite captures 
+
 
 [Finite]
 Finite.<size(s)> = "3"
@@ -27,8 +27,8 @@ RefClkSource = "PXI_Trig0"
 TimeRefType = "GPS"
 
 [Triggers]
-.<size(s)> = "1"
-0.Name = "PPS_Trigger"
+.<size(s)> = "2"
+0.Name = "External_Trigger"
 0.DestTerm = "PXI_Trig3"
 0.SrcTerm = "PFI1"
 0.SyncClk = "SyncClkAsync"
@@ -37,6 +37,24 @@ TimeRefType = "GPS"
 0.Initiated = "FALSE"
 0.Type = "Connect"
 0.TrigTime = "FALSE"
+1.Name = "Digitizer_TrigTime"
+1.DestTerm = "PXI_Trig6"
+1.SrcTerm = "PFI0"
+1.SyncClk = "SyncClkAsync"
+1.Edge = "0"
+1.Invert? = "0"
+1.Initiated = "FALSE"
+1.Type = "Connect"
+1.TrigTime = "FALSE"
+2.Name = "Trig monitor"
+2.DestTerm = "PFI2"
+2.SrcTerm = "PXI_Trig3"
+2.SyncClk = ""
+2.Edge = "0"
+2.Invert? = "0"
+2.Initiated = "FALSE"
+2.Type = "Connect"
+2.TrigTime = "FALSE"
 
 [Clocks]
 .<size(s)> = "3"
@@ -53,20 +71,38 @@ TimeRefType = "GPS"
 1.RefClk = "Synchronization Clock (Full Speed)"
 1.ClkTerminal = "PXI_Trig4"
 1.Frequency = "0.000000"
-1.DutyCycle = "0.000000"
+1.DutyCycle = "50.000000"
 1.ClkType = "TrigClk"
 1.Initiated = "FALSE"
 1.TrigTime = "FALSE"
 1.Delay = "0.000000"
 2.Name = "1_PPS"
 2.RefClk = ""
-2.ClkTerminal = "/PXI1Slot7/PFI1"
+2.ClkTerminal = "/PXI1Slot7/PFI0"
 2.Frequency = "1.000000"
 2.DutyCycle = "0.500000"
 2.ClkType = "FreqClk"
 2.Initiated = "FALSE"
 2.TrigTime = "TRUE"
 2.Delay = "0.000000"
+3.Name = "1_PPS"
+3.RefClk = ""
+3.ClkTerminal = "/PXI1Slot7/PFI1"
+3.Frequency = "1.000000"
+3.DutyCycle = "0.500000"
+3.ClkType = "FreqClk"
+3.Initiated = "FALSE"
+3.TrigTime = "TRUE"
+3.Delay = "0.000000"
+4.Name = "FGen_Trigger"
+4.RefClk = ""
+4.ClkTerminal = "/PXI1Slot7/PFI2"
+4.Frequency = "1.000000"
+4.DutyCycle = "0.500000"
+4.ClkType = "FreqClk"
+4.Initiated = "FALSE"
+4.TrigTime = "FALSE"
+4.Delay = "0.000000"
 
 [SyncWinClk]
 SyncWinClk = "FALSE"
