--- a/UserFiles/Plugins/Analysis/AnalysisPluginBaseClass/AnalysisPluginBase.ini
+++ b/UserFiles/Plugins/Analysis/AnalysisPluginBaseClass/AnalysisPluginBase.ini
@@ -2,19 +2,10 @@
 Path = "..\..\AnalysisPlugins\AnalysisPluginBaseClass\AnalysisPluginsBase.lvclass"
 
 [Type]
-Type = None
+Type = none
 
 [Script]
-Script.<size(s)> = "9"
-Script 0 = "LoopConfigStopCond,TrigtimeGtTend,10.0"
-Script 1 = "SyncGetTrigTimestamp,1_PPS,2.0"
-Script 2 = "LoopSetStopCondition"
-Script 3 = "FGenInitiateGen"
-Script 4 = "SensorStart"
-Script 5 = "GetLoopScript,Digitizer,Sync"
-Script 6 = "FGenAbortGen"
-Script 7 = "DigitizerAbort"
-Script 8 = "SensorStop"
+Script.<size(s)> = "0"
 
 [Default Params]
 F0 = "60"
@@ -41,4 +32,3 @@ MagCorr 2 = "1"
 MagCorr 3 = "1"
 MagCorr 4 = "1"
 MagCorr 5 = "1"
-
