--- a/UserFiles/Plugins/Sensor/PmuCalCal/PmuCalCal.ini
+++ b/UserFiles/Plugins/Sensor/PmuCalCal/PmuCalCal.ini
@@ -4,6 +4,9 @@ Path = "..\..\SensorPlugins\PmuCalCal\PmuCalCal.lvclass"
 [Type]
 Type = Pmu Cal Cal
 
+[Script]
+Script.<size(s)> = "0"
+
 [PhaseArray]
 PhaseArray.<size(s)> = "8"
 PhaseArray 0 = "VA"
@@ -22,3 +25,6 @@ F0 = "50"
 FSamp = "800"
 SettlingTime = "7.000000"
 T0 = "0"
+
+[Script]
+Script.<size(s)> = "0"
