Addsed an [AbortScript] to all the scripts and deleted some obsolete scripts.

--- a/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Current.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Current.ini
@@ -18,6 +18,11 @@ LoopScript 0 = "DigitizerFetchWaveforms"
 LoopScript 1 = "DigitizerReadWaveforms"
 LoopScript 2 = "AnalysisWriteWaveforms"
 
+[AbortScript]
+AbortScript.<size(s)> = "2"
+AbortScript 1 = "DigitizerAbort"
+AbortScript 2 = "DigitizerClose"
+
 [Handle]
 Handle = PXI1SLOT3
 
