--- a/UserFiles/Plugins/FGen/NiPxi6733/PMU (Ramp).ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/PMU (Ramp).ini
@@ -16,6 +16,11 @@ LoopScript.<size(s)> = "2"
 LoopScript 0 = "GetSysTime"
 LoopScript 1 = "LoopUntilDone"
 
+[AbortScript]
+AbortScript.<size(s)> = "2"
+AbortScript 0 = "FGenAbortGen"
+AbortScript 1 = "FGenClose"
+
 [RefClk]
 RefClk = "0"
 
