--- a/UserFiles/Plugins/FGen/NiPxi6733/PMU (SteadyState).ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/PMU (SteadyState).ini
@@ -10,14 +10,13 @@ Script 0 = "FGenInitialize,false,true"
 Script 1 = "Wait,10"
 Script 2 = "FGenConfigFunction"
 Script 3 = "FGenConfigTriggers"
-# run script for finite captures 
 
-[Finite]
-Finite.<size(s)> = "4"
-Finite 0 = "FGenInitialize,false,true"
-Finite 1 = "Wait,10"
-Finite 2 = "FGenConfigFunction"
-Finite 3 = "FGenConfigTriggers"
+
+[AbortScript]
+AbortScript.<size(s)> = "2"
+AbortScript 0 = "FGenAbortGen"
+AbortScript 1 = "FGenClose"
+
 
 [RefClk]
 RefClk = "0"
