--- a/UserFiles/Plugins/Sensor/C37.118_Pmu/C37.118_PMU.ini
+++ b/UserFiles/Plugins/Sensor/C37.118_Pmu/C37.118_PMU.ini
@@ -6,6 +6,11 @@ Type = C37.118 PMU
 
 [Script]
 Script.<size(s)> = '0'
+# The analysis script turns the PMU stream on and off at the appropriate times
+
+[AbortScript]
+AbortScript.<size(s)> = "1"
+AbortScript 0 = "SensorStop"
 
 [PhaseArray]
 PhaseArray.<size(s)> = "8"
