--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
@@ -16,6 +16,9 @@ LoopScript.<size(s)> = "2"
 LoopScript 0 = "GetSysTime"
 LoopScript 1 = "LoopUntilDone"
 
+[AbortScript]
+AbortScript.<size(s)> = "0"
+
 [Handle]
 RefClk = "PXI1Slot7"
 Timing = "PXI1Slot4"
