--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/Dyn3_PMUCal.ini
@@ -10,13 +10,9 @@ Script.<size(s)> = "3"
 Script 0 = "ErrorSeverity,Abort"
 Script 1 = "SyncGetLockStatus"
 Script 2 = "SyncCheckLock"
-# run script for finite captures 
 
-[Finite]
-Finite.<size(s)> = "3"
-Finite 0 = "ErrorSeverity,Abort"
-Finite 1 = "SyncGetLockStatus"
-Finite 2 = "SyncCheckLock"
+[AbortScript]
+AbortScript.<size(s)> = "0"
 
 [Handle]
 RefClk = "PXI1Slot7"
@@ -30,7 +26,7 @@ TimeRefType = "GPS"
 .<size(s)> = "4"
 0.Name = "PPS_Trigger"
 0.DestTerm = "PXI_Trig3"
-0.SrcTerm = "PFI1"
+0.SrcTerm = "PFI0"
 0.SyncClk = "SyncClkAsync"
 0.Edge = "0"
 0.Invert? = "0"
