--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/HIL_Sync.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/HIL_Sync.ini
@@ -9,6 +9,9 @@ Script.<size(s)> = "2"
 Script 0 = "GetSyncLockStatus"
 Script 1 = "CheckSyncLock"
 
+[AbortScript]
+AbortScript.<size(s)> = "0"
+
 [Handle]
 RefClk = "PXI1Slot3"
 Timing = "PXI1Slot2"
