--- a/UserFiles/Plugins/Analysis/PmuAnalysis/Pmu (SteadyState).ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/Pmu (SteadyState).ini
@@ -3,78 +3,35 @@ Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
 
 [Type]
 Type = PMU (SteadyState)
-#Default Script
-# gets continupous data for a fixed amount of time while analysing, then stops and completes the analysis
 
 [Script]
-Script.<size(s)> = "18"
+Script.<size(s)> = "16"
 Script 0 = "FGenGetFunctionParams"
 Script 1 = "AnalysisSetFunctionParams"
-Script 2 = "LoopConfigStopCond,TimeGtEnd,6"
-Script 3 = "GetSysTime"
-Script 4 = "LoopSetStopCondition"
-Script 5 = "FGenInitiateGen"
-Script 6 = "AnalysisInitialize"
-Script 7 = "Wait,1000"
-Script 8 = "SensorStart"
-Script 9 = "GetLoopScript,Digitizer"
-Script 10 = "DigitizerAbort"
-Script 11 = "DigitizerClose"
-Script 12 = "FGenAbortGen"
-Script 13 = "FGenClose"
-Script 14 = "SensorStop"
-Script 15 = "LoopConfigStopCond,AnalysisIdle,Idle"
-Script 16 = "GetLoopScript,Analysis"
-Script 17 = "AnalysisAbort"
+Script 2 = "FGenInitiateGen"
+Script 3 = "AnalysisInitialize"
+Script 4 = "Wait,1000"
+Script 5 = "SensorStart"
+Script 6 = "SyncTimedTrigger,Timed_1,0.0,0.01,Rising"
+Script 7 = "GetLoopScript,Digitizer"
+Script 8 = "DigitizerAbort"
+Script 9 = "DigitizerClose"
+Script 10 = "FGenAbortGen"
+Script 11 = "FGenClose"
+Script 12 = "SensorStop"
+Script 13 = "LoopConfigStopCond,AnalysisIdle,Idle"
+Script 14 = "GetLoopScript,Analysis"
+Script 15 = "AnalysisAbort"
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
 LoopScript 0 = "Wait,1000"
 LoopScript 1 = "AnalysisGetState"
 LoopScript 2 = "LoopUntilDone"
-# Script for Finite capture
-# WARNING capturing more than one record waits until the next trigger
-
-[Finite]
-Finite.<size(s)> = "21"
-Finite 0 = "FGenGetFunctionParams"
-Finite 1 = "AnalysisSetFunctionParams"
-Finite 2 = "LoopConfigStopCond,TimeGtEnd,4"
-Finite 3 = "GetSysTime"
-Finite 4 = "LoopSetStopCondition"
-Finite 5 = "FGenInitiateGen"
-Finite 6 = "SensorStart"
-Finite 7 = "GetLoopScript,FGen"
-Finite 8 = "AnalysisInitialize"
-Finite 9 = "DigitizerFetchWaveforms"
-Finite 10 = "Wait,5000"
-Finite 11 = "DigitizerReadWaveforms"
-Finite 12 = "AnalysisWriteWaveforms"
-Finite 13 = "DigitizerAbort"
-Finite 14 = "DigitizerClose"
-Finite 15 = "FGenAbortGen"
-Finite 16 = "FGenClose"
-Finite 17 = "SensorStop"
-Finite 18 = "LoopConfigStopCond,AnalysisIdle,Idle"
-Finite 19 = "GetLoopScript,FiniteLoop,Analysis"
-Finite 20 = "AnalysisAbort"
-# loop script for finite capture
-
-[FiniteLoop]
-FiniteLoop.<size(s)> = "3"
-FiniteLoop 0 = "Wait,1000"
-FiniteLoop 1 = "AnalysisGetState"
-FiniteLoop 2 = "LoopUntilDone"
 
 [AbortScript]
-AbortScript.<size(s)> = "7"
-AbortScript 0 = "FGenAbortGen"
-AbortScript 1 = "DigitizerAbort"
-AbortScript 2 = "SensorStop"
-AbortScript 3 = "AnalysisAbort"
-AbortScript 4 = "DigitizerClose"
-AbortScript 5 = "FGenClose"
-AbortScript 6 = "Stop"
+AbortScript.<size(s)> = "1"
+AbortScript 0 = "AnalysisAbort"
 
 [clConfig]
 F0 = "50"
