--- a/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Voltage.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase_Voltage.ini
@@ -18,6 +18,11 @@ LoopScript 0 = "DigitizerFetchWaveforms"
 LoopScript 1 = "DigitizerReadWaveforms"
 LoopScript 2 = "AnalysisWriteWaveforms"
 
+[AbortScript]
+AbortScript.<size(s)> = "6"
+AbortScript 2 = "SensorStop"
+AbortScript 3 = "AnalysisAbort"
+
 [Handle]
 Handle = PXI1SLOT3
 
