--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU (SteadyState).ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU (SteadyState).ini
@@ -12,23 +12,19 @@ Script 1 = "Wait,10"
 Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
 Script 4 = "DigitizerConfigTrigger"
-Script 5 = "DigitizerFetchWaveforms"
+Script 5 = "LoopConfigStopCond,LoopCount,5"
 
 [LoopScript]
-LoopScript.<size(s)> = "5"
+LoopScript.<size(s)> = "4"
 LoopScript 0 = "DigitizerFetchWaveforms"
-LoopScript 1 = "DigitizerReadWaveforms"
+LoopScript 1 = "DigitizerReadWaveforms,20000"
 LoopScript 2 = "AnalysisWriteWaveforms"
-LoopScript 3 = "GetSysTime"
-LoopScript 4 = "LoopUntilDone"
+LoopScript 3 = "LoopUntilDone"
 
-[Finite]
-Finite.<size(s)> = "5"
-Finite 0 = "DigitizerInitialize"
-Finite 1 = "Wait,10"
-Finite 2 = "DigitizerConfigChannels"
-Finite 3 = "DigitizerConfigAcquisition"
-Finite 4 = "DigitizerConfigTrigger"
+[AbortScript]
+AbortScript.<size(s)> = "2"
+AbortScript 0 = "DigitizerAbort"
+AbortScript 1 = "DigitizerClose"
 
 [Handle]
 Handle = PXI1SLOT3
