--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU Cal Cal (SteadyState).ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU Cal Cal (SteadyState).ini
@@ -22,13 +22,10 @@ LoopScript 2 = "AnalysisWriteWaveforms"
 LoopScript 3 = "GetSysTime"
 LoopScript 4 = "LoopUntilDone"
 
-[Finite]
-Finite.<size(s)> = "5"
-Finite 0 = "DigitizerInitialize"
-Finite 1 = "Wait,10"
-Finite 2 = "DigitizerConfigChannels"
-Finite 3 = "DigitizerConfigAcquisition"
-Finite 4 = "DigitizerConfigTrigger"
+[AbortScript]
+AbortScript.<size(s)> = "2"
+AbortScript 1 = "DigitizerAbort"
+AbortScript 2 = "DigitizerClose"
 
 [Handle]
 Handle = PXI1SLOT3
