--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PmuCalCal.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PmuCalCal.ini
@@ -12,6 +12,7 @@ Script 1 = "Wait,10"
 Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
 Script 4 = "DigitizerConfigTrigger"
+Script 5 = "LoopConfigStopCond,LoopCount,5"
 
 
 [LoopScript]
@@ -22,10 +23,9 @@ LoopScript 2 = "AnalysisWriteWaveforms"
 LoopScript 3 = "LoopUntilDone"
 
 [AbortScript]
-AbortScript.<size(s)> = 3
+AbortScript.<size(s)> = 2
 AbortScript 0 = "DigitizerAbort"
 AbortScript 1 = "DigitizerClose"
-AbortScript 2 = "Stop"
 
 [Handle]
 Handle = PXI1SLOT3
