--- a/UserFiles/Plugins/FGen/NiPxi6733/PMU (Step).ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/PMU (Step).ini
@@ -17,6 +17,11 @@ LoopScript 0 = "Wait,100"
 LoopScript 1 = "GetSysTime"
 LoopScript 2 = "LoopUntilDone"
 
+[AbortScript]
+AbortScript.<size(s)> = "2"
+AbortScript 0 = "FGenAbortGen"
+AbortScript 1 = "FGenClose"
+
 [RefClk]
 RefClk = "0"
 
