--- a/UserFiles/Plugins/Sensor/PmuCalCal/PmuCalCal.ini
+++ b/UserFiles/Plugins/Sensor/PmuCalCal/PmuCalCal.ini
@@ -6,6 +6,11 @@ Type = Pmu Cal Cal
 
 [Script]
 Script.<size(s)> = "0"
+# The analysis module turns the Sensor on and off at the appropriate time
+
+[AbortScript]
+AbortScript.<size(s)> = "1"
+AbortScript 0 = "SensorStop"
 
 [PhaseArray]
 PhaseArray.<size(s)> = "8"
