--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/PMUCalCal.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/PMUCalCal.ini
@@ -11,12 +11,8 @@ Script 0 = "ErrorSeverity,Abort"
 Script 1 = "SyncGetLockStatus"
 Script 2 = "SyncCheckLock"
 
-
-[Finite]
-Finite.<size(s)> = "3"
-Finite 0 = "ErrorSeverity,Abort"
-Finite 1 = "SyncGetLockStatus"
-Finite 2 = "SyncCheckLock"
+[AbortScript]
+AbortScript.<size(s)> = "0"
 
 [Handle]
 RefClk = "PXI1Slot7"
