ini files for CalCal

--- a/UserFiles/Plugins/FGen/FgenPluginBaseClass/none.ini
+++ b/UserFiles/Plugins/FGen/FgenPluginBaseClass/none.ini
@@ -10,6 +10,9 @@ RefClk = "0"
 [Script]
 Script.<size(s)> = "0"
 
+[AbortScript]
+AbortScript.<size(s) = "0"
+
 [Timebase]
 source = "/PXI1Slot6/PXI_Trig1"
 rate = "18000000.000000"
