Cleaning up some of the .ini files

--- a/UserFiles/Plugins/Digitizer/DigitizerBaseClass/DigitizerBase.ini
+++ b/UserFiles/Plugins/Digitizer/DigitizerBaseClass/DigitizerBase.ini
@@ -4,6 +4,15 @@ Path = "..\..\DigitizerPlugins\DigitizerBaseClass\DigitizerBase.lvclass"
 [Type]
 Type = IVI Digitizer
 
+[Script]
+Script.<size(s)> = "0"
+
+[LoopScript]
+LoopScript.<size(s)> = "0"
+
+[AbortScript]
+AbortScript.<size(s)> = "0"
+
 [Acquisition]
 SampleRate = "4800.000000"
 RecordSize = "4800"
