--- a/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase.ini
@@ -2,16 +2,15 @@
 Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
-Type = "AbsPhase_Sine_6Chan"
+Type = "AbsPhase"
 
 [Script]
-Script.<size(s)> = "6"
+Script.<size(s)> = "5"
 Script 0 = "DigitizerInitialize"
 Script 1 = "Wait,10"
 Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
-Script 4 = "DigitizerConfigTrigger\0D"
-Script 5 = ""
+Script 4 = "DigitizerConfigTrigger"
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
@@ -19,10 +18,10 @@ LoopScript 0 = "DigitizerFetchWaveforms"
 LoopScript 1 = "DigitizerReadWaveforms"
 LoopScript 2 = "AnalysisWriteWaveforms"
 
-[AbortScript]
-AbortScript.<size(s)> = "6"
-AbortScript 2 = "SensorStop"
-AbortScript 3 = "AnalysisAbort"
+AbortScript]
+AbortScript.<size(s)> = "2"
+AbortScript 0 = "DigitizerAbort"
+AbortScript 1 = "DigitizerClose"
 
 [Handle]
 Handle = PXI1SLOT3
@@ -68,7 +67,7 @@ DestTerm = "PXI_Trig3"
 
 [Channel_0]
 Name = "ai0"
-Enabled = "FALSE"
+Enabled = "TRUE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
@@ -76,7 +75,7 @@ Range = "5.000000"
 
 [Channel_1]
 Name = "ai1"
-Enabled = "FALSE"
+Enabled = "TRUE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
@@ -84,7 +83,7 @@ Range = "5.000000"
 
 [Channel_2]
 Name = "ai2"
-Enabled = "FALSE"
+Enabled = "TRUE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
@@ -92,7 +91,7 @@ Range = "5.000000"
 
 [Channel_3]
 Name = "ai3"
-Enabled = "TRUE"
+Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
@@ -106,7 +105,7 @@ Route = "none"
 
 [Channel_4]
 Name = "ai4"
-Enabled = "TRUE"
+Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
@@ -114,7 +113,7 @@ Range = "5.000000"
 
 [Channel_5]
 Name = "ai5"
-Enabled = "TRUE"
+Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
@@ -122,7 +121,7 @@ Range = "5.000000"
 
 [Channel_6]
 Name = "ai6"
-Enabled = "TRUE"
+Enabled = "FALSE"
 InputImpedance = "0.000000"
 Coupling = "AC"
 Offset = "0.000000"
