--- a/UserFiles/Plugins/Sensor/SensorBaseClass/SensorBase.ini
+++ b/UserFiles/Plugins/Sensor/SensorBaseClass/SensorBase.ini
@@ -6,3 +6,9 @@ Type = none
 
 [Script]
 Script.<size(s)> = "0"
+
+[LoopScript]
+LoopScript.<size(s)> = "0"
+
+[AbortScript]
+AbortScript.<size(s)> = "0"
