--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
@@ -5,11 +5,10 @@ Path = "..\..\SyncPlugins\PXI_MultiTrig\PXI_MultiTrig.lvclass"
 Type = "AbsPhase"
 
 [Script]
-Script.<size(s)> = "4"
-Script 0 = "ErrorSeverity,auto"
+Script.<size(s)> = "3"
+Script 0 = "ErrorSeverity,Abort"
 Script 1 = "SyncGetLockStatus"
-Script 2 = "SyncCheckLock\0D"
-Script 3 = ""
+Script 2 = "SyncCheckLock"
 
 [LoopScript]
 LoopScript.<size(s)> = "2"
@@ -109,7 +108,7 @@ TimeRefType = "GPS"
 5.Name = "PRS"
 5.RefClk = "Synchronization"
 5.ClkTerminal = "/PXI1Slot7/PFI1"
-5.Frequency = "5000.000000"
+5.Frequency = "50.000000"
 5.DutyCycle = "0.500000"
 5.ClkType = "FreqClk"
 5.Initiated = "FALSE"
