--- a/UserFiles/Plugins/Analysis/AnalysisPluginBaseClass/AnalysisPluginBase.ini
+++ b/UserFiles/Plugins/Analysis/AnalysisPluginBaseClass/AnalysisPluginBase.ini
@@ -7,6 +7,12 @@ Type = none
 [Script]
 Script.<size(s)> = "0"
 
+[LoopScript]
+LoopScript.<size(s)> = "0"
+
+[AbortScript]
+AbortScript.<size(s)> = "0"
+
 [Default Params]
 F0 = "60"
 SettlingTime = "7"
