Working on the step tests.

--- a/UserFiles/Plugins/Analysis/PmuAnalysis/Pmu (SteadyState).ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/Pmu (SteadyState).ini
@@ -6,7 +6,7 @@ Type = PMU (SteadyState)
 
 [Script]
 Script.<size(s)> = "16"
-Script 0 = "FGenGetFunctionParams"
+Script 0 = "FGenGetFunctionParams,10000"
 Script 1 = "AnalysisSetFunctionParams"
 Script 2 = "FGenInitiateGen"
 Script 3 = "AnalysisInitialize"
@@ -55,4 +55,4 @@ MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
 DlyCorr = "<size(s)=6> 1501 1555 1926 482 506 534"
 
 [Duration]
-Duration = "5.000000"
+Duration = "1.000000"
