--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU (Step).ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU (Step).ini
@@ -2,7 +2,7 @@
 Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
-Type = PMU (SteadyState)
+Type = PMU (Step)
 # Default Script
 
 [Script]
@@ -12,7 +12,7 @@ Script 1 = "Wait,10"
 Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
 Script 4 = "DigitizerConfigTrigger"
-Script 5 = "LoopConfigStopCond,LoopCount,6"
+Script 5 = "LoopConfigStopCond,LoopCount,3"
 
 [LoopScript]
 LoopScript.<size(s)> = "4"
