--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PMU (Step).ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PMU (Step).ini
@@ -5,28 +5,23 @@ Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
 Type = "PMU (Step)"
 
 [Script]
-Script.<size(s)> = "21"
-Script 0 = "FGenGetFunctionParams"
+Script.<size(s)> = "16"
+Script 0 = "FGenGetFunctionParams,10000"
 Script 1 = "AnalysisSetFunctionParams"
-Script 2 = "LoopConfigStopCond,TimeGtEnd,4"
-Script 3 = "GetSysTime"
-Script 4 = "LoopSetStopCondition"
-Script 5 = "FGenInitiateGen"
-Script 6 = "SensorStart"
-Script 7 = "GetLoopScript,FGen"
-Script 8 = "AnalysisInitialize"
-Script 9 = "DigitizerFetchWaveforms"
-Script 10 = "Wait,5000"
-Script 11 = "DigitizerReadWaveforms"
-Script 12 = "AnalysisWriteWaveforms"
-Script 13 = "DigitizerAbort"
-Script 14 = "DigitizerClose"
-Script 15 = "FGenAbortGen"
-Script 16 = "FGenClose"
-Script 17 = "SensorStop"
-Script 18 = "LoopConfigStopCond,AnalysisIdle,Idle"
-Script 19 = "GetLoopScript,Analysis"
-Script 20 = "AnalysisAbort"
+Script 2 = "AnalysisInitialize"
+Script 3 = "FGenInitiateGen"
+Script 4 = "Wait,1000"
+Script 5 = "SensorStart"
+Script 6 = "SyncTimedTrigger,Timed_1,0.0,0.01,Rising"
+Script 7 = "GetLoopScript,Digitizer"
+Script 8 = "DigitizerAbort"
+Script 9 = "DigitizerClose"
+Script 10 = "FGenAbortGen"
+Script 11 = "FGenClose"
+Script 12 = "SensorStop"
+Script 13 = "LoopConfigStopCond,AnalysisIdle,Idle"
+Script 14 = "GetLoopScript,Analysis"
+Script 15 = "AnalysisAbort"
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
@@ -35,20 +30,14 @@ LoopScript 1 = "AnalysisGetState"
 LoopScript 2 = "LoopUntilDone"
 
 [AbortScript]
-AbortScript.<size(s)> = "7"
-AbortScript 0 = "FGenAbortGen"
-AbortScript 1 = "DigitizerAbort"
-AbortScript 2 = "SensorStop"
-AbortScript 3 = "AnalysisAbort"
-AbortScript 4 = "DigitizerClose"
-AbortScript 5 = "FGenClose"
-AbortScript 6 = "Stop"
+AbortScript.<size(s)> = "1"
+AbortScript 0 = "AnalysisAbort"
 
 [clConfig]
 F0 = "50"
 SettlingTime = "0.000000"
 AnalysisCycles = "6.000000"
-SampleRate = "24000.000000"
+SampleRate = "48000.000000"
 NumChannels = "6"
 TsOffset = "middle"
 %TsOffset: 1 = start, 2 = middle, 3 = end
