Refinements to the step test: Added step test to MainScript.py Tweaks to the test .ini script.  For now, the step signal is only 2 seconds duration and the digitizer and sensor both start at the same time as the FGen.  this causes an anomoly at the beginning of the analyysis while the sensor settles. There is an issue when I try to start the FGen 1 second before the digitizer that sometimes the digitizer triggers too early.  I plan to experiment with fixing this but for now just trim the first reports from the analysis.

--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PMU (Step).ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PMU (Step).ini
@@ -5,23 +5,22 @@ Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
 Type = "PMU (Step)"
 
 [Script]
-Script.<size(s)> = "16"
+Script.<size(s)> = "14"
 Script 0 = "FGenGetFunctionParams,10000"
 Script 1 = "AnalysisSetFunctionParams"
 Script 2 = "AnalysisInitialize"
-Script 3 = "SyncTimedTrigger,Timed_1,0.0,0.01,Rising"
+#Script 3 = "SyncTimedTrigger,Timed_1,0.0,0.01,Rising"
+Script 3 = "SensorStart"
 Script 4 = "FGenInitiateGen"
-Script 5 = "Wait,1000"
-Script 6 = "SensorStart"
-Script 7 = "GetLoopScript,Digitizer"
-Script 8 = "DigitizerAbort"
-Script 9 = "DigitizerClose"
-Script 10 = "FGenAbortGen"
-Script 11 = "FGenClose"
-Script 12 = "SensorStop"
-Script 13 = "LoopConfigStopCond,AnalysisIdle,Idle"
-Script 14 = "GetLoopScript,Analysis"
-Script 15 = "AnalysisAbort"
+Script 5 = "GetLoopScript,Digitizer"
+Script 6 = "DigitizerAbort"
+Script 7 = "DigitizerClose"
+Script 8 = "FGenAbortGen"
+Script 9 = "FGenClose"
+Script 10 = "SensorStop"
+Script 11 = "LoopConfigStopCond,AnalysisIdle,Idle"
+Script 12 = "GetLoopScript,Analysis"
+Script 13 = "AnalysisAbort"
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
