Completed the latest (last) phase of AbsPhase analysis, switching back to PMU cal and cal cal

--- a/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase.ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/AbsPhase.ini
@@ -17,7 +17,6 @@ LoopScript.<size(s)> = "3"
 LoopScript 0 = "DigitizerFetchWaveforms"
 LoopScript 1 = "DigitizerReadWaveforms"
 LoopScript 2 = "AnalysisWriteWaveforms"
-
 AbortScript]
 AbortScript.<size(s)> = "2"
 AbortScript 0 = "DigitizerAbort"
@@ -68,26 +67,26 @@ DestTerm = "PXI_Trig3"
 [Channel_0]
 Name = "ai0"
 Enabled = "TRUE"
-InputImpedance = "1.000000"
+InputImpedance = "1000000.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "5.000000"
+Range = "2.000000"
 
 [Channel_1]
 Name = "ai1"
-Enabled = "TRUE"
+Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "5.000000"
+Range = "2.000000"
 
 [Channel_2]
 Name = "ai2"
-Enabled = "TRUE"
+Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "5.000000"
+Range = "2.000000"
 
 [Channel_3]
 Name = "ai3"
@@ -95,7 +94,7 @@ Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "5.000000"
+Range = "2.000000"
 
 [ExportSignal]
 signal = "12487"
@@ -109,7 +108,7 @@ Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "5.000000"
+Range = "2.000000"
 
 [Channel_5]
 Name = "ai5"
@@ -117,7 +116,7 @@ Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "5.000000"
+Range = "2.000000"
 
 [Channel_6]
 Name = "ai6"
@@ -125,12 +124,12 @@ Enabled = "FALSE"
 InputImpedance = "0.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "5.000000"
+Range = "2.000000"
 
 [Channel_7]
 Name = "ai7"
-Enabled = "TRUE"
+Enabled = "FALSE"
 InputImpedance = "1.000000"
 Coupling = "AC"
 Offset = "0.000000"
-Range = "5.000000"
+Range = "2.000000"
