--- a/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
+++ b/UserFiles/Plugins/Sync/PXI_MultiTrig/AbsPhase.ini
@@ -29,7 +29,7 @@ TimeRefType = "GPS"
 ; Digitizer TrigTime provides a more accurate timestamp for the digitizer output.
 
 [Triggers]
-.<size(s)> = "3"
+.<size(s)> = "4"
 0.Name = "PPS_Trigger"
 0.DestTerm = "PXI_Trig3"
 0.SrcTerm = "PFI0"
@@ -57,6 +57,15 @@ TimeRefType = "GPS"
 2.Initiated = "FALSE"
 2.Type = "Connect"
 2.TrigTime = "FALSE"
+3.Name = "Digitizer Clk"
+3.DestTerm = "/PXI1Slot3/PFI0"
+3.SrcTerm = "/PXI1Slot3/PXI_Trig2"
+3.SyncClk = "SyncClkAsync"
+3.Edge = "0"
+3.Invert? = "0"
+3.Initiated = "FALSE"
+3.Type = "Connect"
+3.TrigTime = "FALSE"
 
 [Clocks]
 .<size(s)> = "6"
@@ -108,7 +117,7 @@ TimeRefType = "GPS"
 5.Name = "PRS"
 5.RefClk = "Synchronization"
 5.ClkTerminal = "/PXI1Slot7/PFI1"
-5.Frequency = "500.000000"
+5.Frequency = "50.000000"
 5.DutyCycle = "0.500000"
 5.ClkType = "FreqClk"
 5.Initiated = "FALSE"
