--- a/UserFiles/Plugins/Analysis/PmuAnalysis/Pmu (Modulation).ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/Pmu (Modulation).ini
@@ -2,7 +2,7 @@
 Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
 
 [Type]
-Type = PMU (SteadyState)
+Type = PMU (Modulation)
 
 [Script]
 Script.<size(s)> = "16"
@@ -36,17 +36,17 @@ AbortScript 0 = "AnalysisAbort"
 [clConfig]
 F0 = "50"
 SettlingTime = "0.000000"
-AnalysisCycles = "6.000000"
+AnalysisCycles = "3.000000"
 SampleRate = "50000.000000"
 NumChannels = "6"
 TsOffset = "middle"
 %TsOffset: 1 = start, 2 = middle, 3 = end
 
 [TestType]
-TestType = "SteadyState"
+TestType = "Modulation"
 
 [FcnIniFilePath]
-Path = "PmuTestFunctions\\50F0_50Fs_FreqRng.ini"
+Path = "PmuTestFunctions\\50F0_50Fs_Modulation.ini"
 
 [MagCorr]
 MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
