Work on scripting, test .ini files and a little error handling

--- a/UserFiles/Plugins/Analysis/PmuAnalysis/Pmu (SteadyState).ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/Pmu (SteadyState).ini
@@ -5,23 +5,25 @@ Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
 Type = PMU (SteadyState)
 
 [Script]
-Script.<size(s)> = "16"
-Script 0 = "FGenGetFunctionParams,10000"
-Script 1 = "AnalysisSetFunctionParams"
-Script 2 = "FGenInitiateGen"
-Script 3 = "AnalysisInitialize"
-Script 4 = "Wait,1000"
-Script 5 = "SensorStart"
-Script 6 = "SyncTimedTrigger,Timed_1,0.0,0.01,Rising"
-Script 7 = "GetLoopScript,Digitizer"
-Script 8 = "DigitizerAbort"
-Script 9 = "DigitizerClose"
-Script 10 = "FGenAbortGen"
-Script 11 = "FGenClose"
-Script 12 = "SensorStop"
-Script 13 = "LoopConfigStopCond,AnalysisIdle,Idle"
-Script 14 = "GetLoopScript,Analysis"
-Script 15 = "AnalysisAbort"
+Script.<size(s)> = "18"
+Script 0 = "ErrorSeverity,autoabort"
+Script 1 = "FGenGetFunctionParams,10000"
+Script 2 = "AnalysisSetFunctionParams"
+Script 3 = "FGenInitiateGen"
+Script 4 = "AnalysisInitialize"
+Script 5 = "Wait,1000"
+Script 6 = "SensorStart"
+Script 7 = "SyncTimedTrigger,Timed_1,0.0,0.01,Rising"
+Script 8 = "GetLoopScript,Digitizer"
+Script 9 = "DigitizerAbort"
+Script 10 = "DigitizerClose"
+Script 11 = "FGenAbortGen"
+Script 12 = "FGenClose"
+Script 13 = "SensorStop"
+Script 14 = "LoopConfigStopCond,AnalysisIdle,Idle"
+Script 15 = "GetLoopScript,Analysis"
+Script 16 = "AnalysisAbort"
+Script 17 = "Wait,2000"
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
@@ -37,7 +39,7 @@ AbortScript 0 = "AnalysisAbort"
 F0 = "50"
 SettlingTime = "0.000000"
 AnalysisCycles = "6.000000"
-SampleRate = "50000.000000"
+SampleRate = "48000.000000"
 NumChannels = "6"
 TsOffset = "middle"
 %TsOffset: 1 = start, 2 = middle, 3 = end
@@ -55,4 +57,4 @@ MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
 DlyCorr = "<size(s)=6> 1501 1555 1926 482 506 534"
 
 [Duration]
-Duration = "1.000000"
+Duration = "5.000000"
