--- a/UserFiles/Plugins/FGen/NiPxi6733/PMU (Modulation).ini
+++ b/UserFiles/Plugins/FGen/NiPxi6733/PMU (Modulation).ini
@@ -11,12 +11,10 @@ Script 1 = "Wait,10"
 Script 2 = "FGenConfigFunction"
 Script 3 = "FGenConfigTriggers"
 
-
 [AbortScript]
 AbortScript.<size(s)> = "2"
 AbortScript 0 = "FGenAbortGen"
 AbortScript 1 = "FGenClose"
-
 
 [RefClk]
 RefClk = "0"
@@ -75,7 +73,7 @@ Channel 5.Connected = "FALSE"
 Channel 5.Mode (Function) = "Function"
 
 [FunctionIniFilePAth]
-Path = "PmuTestFunctions\\50F0_50Fs_Modulation.ini"
+Path = "PmuTestFunctions\\50F0_50Fs_ModPhase.ini"
 
 [Triggers]
 Count = "1"
