--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PMU (Ramp).ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PMU (Ramp).ini
@@ -5,16 +5,16 @@ Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
 Type = "PMU (Ramp)"
 
 [Script]
-Script.<size(s)> = "17"
-Script 0 = "FGenGetFunctionParams"
-Script 1 = "AnalysisSetFunctionParams"
-Script 2 = "LoopConfigStopCond,TimeGtEnd,10"
-Script 3 = "GetSysTime"
-Script 4 = "LoopSetStopCondition"
-Script 5 = "FGenInitiateGen"
+Script.<size(s)> = "18"
+Script 0 = "ErrorSeverity,abort"
+Script 1 = "FGenGetFunctionParams,20000"
+Script 2 = "AnalysisSetFunctionParams"
+Script 3 = "FGenInitiateGen"
+Script 4 = "AnalysisInitialize"
+Script 5 = "Wait,1000"
 Script 6 = "SensorStart"
-Script 7 = "AnalysisInitialize"
-Script 8 = "GetLoopScript,Digitizer,FGen"
+Script 7 = "SyncTimedTrigger,Timed_1,0.0,0.01,Rising"
+Script 8 = "GetLoopScript,Digitizer"
 Script 9 = "DigitizerAbort"
 Script 10 = "DigitizerClose"
 Script 11 = "FGenAbortGen"
@@ -23,6 +23,7 @@ Script 13 = "SensorStop"
 Script 14 = "LoopConfigStopCond,AnalysisIdle,Idle"
 Script 15 = "GetLoopScript,Analysis"
 Script 16 = "AnalysisAbort"
+Script 17 = "Wait,2000"
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
@@ -31,36 +32,29 @@ LoopScript 1 = "AnalysisGetState"
 LoopScript 2 = "LoopUntilDone"
 
 [AbortScript]
-AbortScript.<size(s)> = "7"
-AbortScript 0 = "FGenAbortGen"
-AbortScript 1 = "DigitizerAbort"
-AbortScript 2 = "SensorStop"
-AbortScript 3 = "AnalysisAbort"
-AbortScript 4 = "DigitizerClose"
-AbortScript 5 = "FGenClose"
-AbortScript 6 = "Stop"
+AbortScript.<size(s)> = "1"
+AbortScript 0 = "AnalysisAbort"
 
 [clConfig]
 F0 = "50"
-SettlingTime = "0.000000"
+SettlingTime = "1.000000"
 AnalysisCycles = "6.000000"
-SampleRate = "24000.000000"
+SampleRate = "48000.000000"
 NumChannels = "6"
 TsOffset = "middle"
 %TsOffset: 1 = start, 2 = middle, 3 = end
 
 [TestType]
-eTestType = "Step"
 TestType = "Ramp"
 
 [FcnIniFilePath]
-Path = "PmuTestFunctions\\50f0_1r0_Ramp.ini"
+Path = "PmuTestFunctions\\45F0_Ramp_Pos.ini"
 
 [MagCorr]
 MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
 
 [DlyCorr]
-DlyCorr = "<size(s)=6> 697 657 735 -152 -153 -150"
+DlyCorr = "<size(s)=6> 1501 1555 1926 482 506 534"
 
 [Duration]
-Duration = "12.000000"
+Duration = "10.000000"
