--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU (Ramp).ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU (Ramp).ini
@@ -3,35 +3,36 @@ Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
 Type = "PMU (Ramp)"
-
 [Script]
-Script.<size(s)> = "5"
+Script.<size(s)> = "6"
 Script 0 = "DigitizerInitialize"
 Script 1 = "Wait,10"
 Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
 Script 4 = "DigitizerConfigTrigger"
+Script 5 = "LoopConfigStopCond,LoopCount,12"
 
 [LoopScript]
-LoopScript.<size(s)> = 3
+LoopScript.<size(s)> = "4"
 LoopScript 0 = "DigitizerFetchWaveforms"
-LoopScript 1 = "DigitizerReadWaveforms"
+LoopScript 1 = "DigitizerReadWaveforms,20000"
 LoopScript 2 = "AnalysisWriteWaveforms"
+LoopScript 3 = "LoopUntilDone"
 
 [AbortScript]
 AbortScript.<size(s)> = "2"
-AbortScript 1 = "DigitizerAbort"
-AbortScript 2 = "DigitizerClose"
+AbortScript 0 = "DigitizerAbort"
+AbortScript 1 = "DigitizerClose"
 
 [Handle]
 Handle = PXI1SLOT3
 
 [Acquisition]
-SampleRate = "24000.000000"
-RecordSize = "24000"
+SampleRate = "48000.000000"
+RecordSize = "48000"
 NumRecords = "1"
 SampleMode = "0"
-Timeout (ms) = "15000"
+Timeout (ms) = "5000"
 
 [Trigger]
 Source = "Edge"
