Adding PmuCalCal python scripts

--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PmuCalCal (SteadyState).ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PmuCalCal (SteadyState).ini
@@ -7,20 +7,18 @@ Type = PMUCalCal (SteadyState)
 # gets continupous data for a fixed amount of time while analysing, then stops and completes the analysis
 
 [Script]
-Script.<size(s)> = "13"
-Script 0 = "LoopConfigStopCond,LoopCount,5"
-Script 1 = "LoopSetStopCondition"
-Script 2 = "AnalysisInitialize"
-Script 3 = "SyncGetPpsTime,5000"
-Script 4 = "SensorSetT0,1"
-Script 5 = "SensorStart"
-Script 6 = "GetLoopScript,Digitizer"
-Script 7 = "DigitizerAbort"
-Script 8 = "DigitizerClose"
-Script 9 = "SensorStop"
-Script 10 = "LoopConfigStopCond,AnalysisIdle,Idle"
-Script 11 = "GetLoopScript,Analysis"
-Script 12 = "AnalysisAbort"
+Script.<size(s)> = "11"
+Script 0 = "AnalysisInitialize"
+Script 1 = "SensorStart"
+Script 2 = "LoopConfigStopCond,LoopCount,3"
+Script 3 = "LoopSetStopCondition"
+Script 4 = "GetLoopScript,Digitizer"
+Script 5 = "DigitizerAbort"
+Script 6 = "DigitizerClose"
+Script 7 = "SensorStop"
+Script 8 = "LoopConfigStopCond,AnalysisIdle,Idle"
+Script 9 = "GetLoopScript,Analysis"
+Script 10 = "AnalysisAbort"
 
 [LoopScript]
 LoopScript.<size(s)> = "3"
@@ -29,10 +27,10 @@ LoopScript 1 = "AnalysisGetState"
 LoopScript 2 = "LoopUntilDone"
 
 [AbortScript]
-AbortScript.<size(s)> = "4"
-AbortScript 1 = SensorStop"
-AbortScript 2 = "AnalysisAbort"
-AbortScript 3 = "Stop"
+AbortScript.<size(s)> = "3"
+AbortScript 0 = "SensorStop"
+AbortScript 1 = "AnalysisAbort"
+AbortScript 2 = "Stop"
 
 [clConfig]
 F0 = "50"
@@ -56,4 +54,4 @@ MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
 DlyCorr = "<size(s)=6> 1501 1555 1926 482 506 534"
 
 [Duration]
-Duration = "5.000000"
+Duration = "1.000000"
