--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMU Cal Cal (SteadyState).ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMU Cal Cal (SteadyState).ini
@@ -6,26 +6,25 @@ Type = PMU Cal Cal (SteadyState)
 # Default Script
 
 [Script]
-Script.<size(s)> = "6"
+Script.<size(s)> = "5"
 Script 0 = "DigitizerInitialize"
 Script 1 = "Wait,10"
 Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
 Script 4 = "DigitizerConfigTrigger"
-Script 5 = "DigitizerFetchWaveforms"
+#Script 5 = "DigitizerFetchWaveforms"
 
 [LoopScript]
-LoopScript.<size(s)> = "5"
+LoopScript.<size(s)> = "4"
 LoopScript 0 = "DigitizerFetchWaveforms"
-LoopScript 1 = "DigitizerReadWaveforms"
+LoopScript 1 = "DigitizerReadWaveforms,60000"
 LoopScript 2 = "AnalysisWriteWaveforms"
-LoopScript 3 = "GetSysTime"
-LoopScript 4 = "LoopUntilDone"
+LoopScript 3 = "LoopUntilDone"
 
 [AbortScript]
 AbortScript.<size(s)> = "2"
-AbortScript 1 = "DigitizerAbort"
-AbortScript 2 = "DigitizerClose"
+AbortScript 0 = "DigitizerAbort"
+AbortScript 1 = "DigitizerClose"
 
 [Handle]
 Handle = PXI1SLOT3
@@ -35,7 +34,7 @@ SampleRate = "48000.000000"
 RecordSize = "48000"
 NumRecords = "1"
 SampleMode = "0"
-Timeout (ms) = "5000"
+Timeout (ms) = "60000"
 
 [Trigger]
 Source = "Edge"
@@ -49,6 +48,14 @@ Sources 0.Hysteresis = "0.000000"
 Sources 0.Level = "0.000000"
 Sources 0.Slope = "Positive"
 Sources 0.Type = "Edge"
+
+[SampleClock]
+Type = "External"
+Source = "PXI_Trig4"
+TimebaseRate = "18000000.000000"
+sample mode = "10123"
+TrigTerm = "PXI1Slot7/PFI0"
+SyncHandle = "PXI1Slot4"
 
 [Channel_0]
 Name = "ai0"
@@ -65,14 +72,6 @@ InputImpedance = "50.000000"
 Coupling = "AC"
 Offset = "0.000000"
 Range = "10.000000"
-
-[SampleClock]
-Type = "External"
-Source = "PXI_Trig4"
-TimebaseRate = "18000000.000000"
-sample mode = "10123"
-TrigTerm = "PXI1Slot7/PFI0"
-SyncHandle = "PXI1Slot4"
 
 [Channel_2]
 Name = "ai2"
@@ -109,7 +108,7 @@ Range = "10.000000"
 [Sync]
 Handle = "PXI1Slot7"
 SrcTerm = ""
-DestTerm = "PXI_Trig3"
+DestTerm = "PXI_Trig6"
 
 [ExportSignal]
 signal = "12487"
