Added PmuCalCal (Ramp) .ini files

--- a/UserFiles/Plugins/Analysis/PmuAnalysis/PMUCalCal (Ramp).ini
+++ b/UserFiles/Plugins/Analysis/PmuAnalysis/PMUCalCal (Ramp).ini
@@ -2,9 +2,7 @@
 Path = "..\..\AnalysisPlugins\PmuAnalysisClass\PmuAnalysis.lvclass"
 
 [Type]
-Type = PMUCalCal (SteadyState)
-#Default Script
-# gets continupous data for a fixed amount of time while analysing, then stops and completes the analysis
+Type = "PMUCalCal (Ramp)"
 
 [Script]
 Script.<size(s)> = "9"
@@ -25,14 +23,12 @@ LoopScript 1 = "AnalysisGetState"
 LoopScript 2 = "LoopUntilDone"
 
 [AbortScript]
-AbortScript.<size(s)> = "3"
-AbortScript 0 = "SensorStop"
-AbortScript 1 = "AnalysisAbort"
-AbortScript 2 = "Stop"
+AbortScript.<size(s)> = "1"
+AbortScript 0 = "AnalysisAbort"
 
 [clConfig]
 F0 = "50"
-SettlingTime = "0.000000"
+SettlingTime = "1.000000"
 AnalysisCycles = "6.000000"
 SampleRate = "48000.000000"
 NumChannels = "6"
@@ -40,10 +36,10 @@ TsOffset = "middle"
 %TsOffset: 1 = start, 2 = middle, 3 = end
 
 [TestType]
-TestType = "SteadyState"
+TestType = "Ramp"
 
 [FcnIniFilePath]
-Path = "PmuTestFunctions\\50F0_50Fs_FreqRng.ini"
+Path = "PmuTestFunctions\\45F0_Ramp_Pos.ini"
 
 [MagCorr]
 MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
@@ -52,4 +48,4 @@ MagCorr = "<size(s)=6> 21.000557 21.000932 21.000614 10.00427 10.00351 10.00485"
 DlyCorr = "<size(s)=6> 1501 1555 1926 482 506 534"
 
 [Duration]
-Duration = "5.000000"
+Duration = "10.000000"
