--- a/UserFiles/Plugins/Digitizer/NiDaqMx/PMUCalCal (Ramp).ini
+++ b/UserFiles/Plugins/Digitizer/NiDaqMx/PMUCalCal (Ramp).ini
@@ -2,8 +2,7 @@
 Path = "..\..\DigitizerPlugins\NiDaqMxClass\NiDaqMx.lvclass"
 
 [Type]
-Type = PMUCalCal (SteadyState)
-# Default Script
+Type = "PMUCalCal (Ramp)"
 
 [Script]
 Script.<size(s)> = "6"
@@ -12,7 +11,7 @@ Script 1 = "Wait,10"
 Script 2 = "DigitizerConfigChannels"
 Script 3 = "DigitizerConfigAcquisition"
 Script 4 = "DigitizerConfigTrigger"
-Script 5 = "LoopConfigStopCond,LoopCount,6"
+Script 5 = "LoopConfigStopCond,LoopCount,12"
 
 [LoopScript]
 LoopScript.<size(s)> = "4"
